# ID2203_Final_Project

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.maelstrom  JEPSEN_README.md  README.md  client.dockerfile  docker-compose.maelstrom.yml  quickanswer.md  server.dockerfile  testplan.md
benchmarks/: .gitignore  README.md  benchmarks.py  gcp_cluster.py  gcp_ssh_client.py  graph_experiment.py  omnipaxos_cluster.py  omnipaxos_configs.py  pyproject.toml  setup-gcp.sh
benchmarks/scripts/: auth.sh  project_env_template  push-client-image.sh  push-server-image.sh
benchmarks/startup_scripts/: instance_startup_script.sh  run_client.sh  run_server.sh
build_scripts/: auth.sh  client-1-config.toml  client-2-config.toml  client-3-config.toml  cluster-config.toml  docker-compose.yml  push-client-image.sh  push-server-image.sh  run-local-client.sh  run-local-cluster.sh  server-1-config.toml  server-2-config.toml  server-3-config.toml  update_toml.sh
scripts/: install_maelstrom.sh  run_tests.sh
src/: common.rs
src/client/: client.rs  configs.rs  data_collection.rs  main.rs  network.rs
src/server/: configs.rs  database.rs  main.rs  network.rs  server.rs
