[project]
name = "omnipaxos-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-core>=2.22.0",
    "google-cloud-compute>=1.20.1",
    "google-cloud-dns>=0.35.0",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "pyqt6>=6.7.1",
    "seaborn>=0.13.2",
    "toml>=0.10.2",
]
